repair for init page

--- a/src/main/resources/templates/page.html
+++ b/src/main/resources/templates/page.html
@@ -1,8 +1,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Chat WebSocket</title>
-    <script th:src="@{/resources/js/sockjs-0.3.4.js}"></script>
-    <script th:src="@{/resources/js/stomp.js}"></script>
+    <script th:src="@{/js/sockjs-0.3.4.js}"></script>
+    <script th:src="@{/js/stomp.js}"></script>
     <script type="text/javascript">
         var stompClient = null;
 
